done with details page

--- a/css/todolist.css
+++ b/css/todolist.css
@@ -1,3 +1,23 @@
+.data-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+    background-color: #8e44ad;
+}
+.table-div {
+    width: 50%;
+    border-collapse: collapse;
+    border: 1px solid #cecfd5;
+    border-left: 1px solid #cecfd5;
+    border-right: 1px solid #cecfd5;
+}
+.data-style {
+    color: white;
+    width: 50%;
+}
 .main-div {
     background-color: #8e44ad;
     display: none;
@@ -21,6 +41,14 @@
     color: white;
     background: transparent;
     text-shadow: 0 2px 2px black;
+}
+.caption-style {
+    margin-bottom: 20px;
+    font-size: 30px;
+    color: white;
+    background: transparent;
+    text-shadow: 0 2px 2px black;
+    width: 100%;
 }
 .input-main-div {
     width: 50%;
