--- a/css/todolist.css
+++ b/css/todolist.css
@@ -81,3 +81,11 @@
     padding: 10px;
     background-color: #F6F6F6;
 }
+.buttonFirst {
+    width: 10%;
+    border-radius: 999rem;
+    outline: none;
+    padding: 10px;
+    background-color: #F6F6F6;
+    margin-top: 15px;   
+}
