--- a/css/todolist.css
+++ b/css/todolist.css
@@ -1,29 +1,35 @@
 .data-div {
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
+    width: 100%; */
+    background-color: antiquewhite;
+    position: fixed;
     width: 100%;
-    background-color: #8e44ad;
+    top: 0%;
+    left: 0%;
 }
 .table-div {
     width: 50%;
-    /* border-collapse: collapse; */
-    border: 1px solid #cecfd5;
-    border-left: 1px solid #cecfd5;
-    border-right: 1px solid #cecfd5;
+    margin-left: 180px;
+    border: 1px solid #000;
+    border-left: 1px solid #000;
+    border-right: 1px solid #000;
+}
+.button-div {
+    margin-right: 180px;
 }
 .div-style {
-    width: 100%;
+    /* width: 100%; */
     height: 100vh;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    padding-top: 40px;
+    justify-content: space-between;
 }
 .data-style {
-    color: white;
+    /* color: white; */
     width: 50%;
 }
 .content {
@@ -36,13 +42,16 @@
 .main-div {
     background-color: #8e44ad;
     display: none;
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
+    position: fixed;
+    z-index: 1;
+    /* left: 0; */
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
+    width: 60%;
+    height: 93%;
+    /* display: block; */
+    margin-left: 20%;
+    box-shadow: 5px 5px lightgrey;
+    margin-top: 20px;
 }
 .div {
     display: flex;
@@ -60,10 +69,7 @@
 .caption-style {
     margin-bottom: 20px;
     font-size: 30px;
-    color: white;
-    background: transparent;
     text-shadow: 0 2px 2px black;
-    width: 100%;
 }
 .input-main-div {
     width: 50%;
@@ -97,10 +103,9 @@
     background-color: #F6F6F6;
 }
 .buttonFirst {
-    width: 10%;
     border-radius: 999rem;
-    outline: none;
-    padding: 10px;
     background-color: #F6F6F6;
-    margin-top: 15px;   
+    height: 42px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
