--- a/css/todolist.css
+++ b/css/todolist.css
@@ -1,10 +1,4 @@
 .data-div {
-    /* display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width: 100%; */
     background-color: antiquewhite;
     position: fixed;
     width: 100%;
@@ -22,14 +16,12 @@
     margin-right: 180px;
 }
 .div-style {
-    /* width: 100%; */
     height: 100vh;
     display: flex;
     padding-top: 40px;
     justify-content: space-between;
 }
 .data-style {
-    /* color: white; */
     width: 50%;
 }
 .content {
@@ -40,29 +32,28 @@
     height: 20px;
 }
 .main-div {
-    background-color: #8e44ad;
+    background-color: white;
     display: none;
     position: fixed;
     z-index: 1;
-    /* left: 0; */
     top: 0;
-    width: 60%;
+    width: 40%;
     height: 93%;
-    /* display: block; */
-    margin-left: 20%;
+    margin-left: 30%;
     box-shadow: 5px 5px lightgrey;
     margin-top: 20px;
 }
 .div {
     display: flex;
-    justify-content: center;
+    padding-top: 50px;
+    /* justify-content: center; */
     align-items: center;
-    width: 100%;
+    /* width: 100%; */
     height: 100vh;
     flex-direction: column;
 }
 .header {
-    color: white;
+    color: black;
     background: transparent;
     text-shadow: 0 2px 2px black;
 }
@@ -75,32 +66,48 @@
     width: 50%;
 }
 .input-div {
-    width: 100%;
+    width: 120%;
     padding: 10px 20px;
-    border: none;
+    border: 1px solid darkgray;
     outline: none;
     margin: 20px 0;
     text-align: center;
 }
 .input-one-row {
-    width: 100%;
+    width: 120%;
     display: flex;
     justify-content: space-between;
 }
 .input-row {
-    width: 45%;
+    width: 21%;
     padding: 10px 20px;
-    border: none;
+    border: 1px solid darkgray;
+    outline: none;
+    margin: 20px 0;
+    text-align: center;
+    font-size: 20px;
+}
+.input-number {
+    width: 85%;
+    padding: 10px 20px;
+    border: 1px solid darkgray;
     outline: none;
     margin: 20px 0;
     text-align: center;
 }
 .button {
-    width: 10%;
+    width: 20%;
     border-radius: 999rem;
     outline: none;
     padding: 10px;
     background-color: #F6F6F6;
+}
+.removeicon {
+    display: flex;
+    justify-content: flex-end;
+    padding-top: 20px;
+    padding-right: 20px;
+    cursor: pointer;
 }
 .buttonFirst {
     border-radius: 999rem;
