--- a/css/todolist.css
+++ b/css/todolist.css
@@ -46,9 +46,7 @@
 .div {
     display: flex;
     padding-top: 50px;
-    /* justify-content: center; */
     align-items: center;
-    /* width: 100%; */
     height: 100vh;
     flex-direction: column;
 }
@@ -58,7 +56,8 @@
     text-shadow: 0 2px 2px black;
 }
 .caption-style {
-    margin-bottom: 20px;
+    margin-right: 76%;
+    margin-bottom: 60px;
     font-size: 30px;
     text-shadow: 0 2px 2px black;
 }
