--- a/css/todolist.css
+++ b/css/todolist.css
@@ -31,6 +31,10 @@
     width: 20px;
     height: 20px;
 }
+.label {
+    font-size: 18px;
+    font-weight: 700;
+}
 .main-div {
     background-color: white;
     display: none;
@@ -51,6 +55,7 @@
     flex-direction: column;
 }
 .header {
+    margin-bottom: 50px;
     color: black;
     background: transparent;
     text-shadow: 0 2px 2px black;
