--- a/css/todolist.css
+++ b/css/todolist.css
@@ -60,6 +60,10 @@
     background: transparent;
     text-shadow: 0 2px 2px black;
 }
+#edittask,#deletetask {
+    background-color: antiquewhite;
+    border: none;   
+}
 .caption-style {
     margin-right: 76%;
     margin-bottom: 60px;
