--- a/css/todolist.css
+++ b/css/todolist.css
@@ -6,11 +6,14 @@
     left: 0%;
 }
 .table-div {
+    border-collapse: collapse;
     width: 50%;
     margin-left: 180px;
-    border: 1px solid #000;
-    border-left: 1px solid #000;
-    border-right: 1px solid #000;
+    text-align: left;
+}
+.table-div td, .table-div th {
+    border: 1px solid black;
+    padding: 8px;
 }
 .button-div {
     margin-right: 180px;
@@ -20,12 +23,6 @@
     display: flex;
     padding-top: 40px;
     justify-content: space-between;
-}
-.data-style {
-    width: 50%;
-}
-.content {
-    padding-top: 15px;
 }
 .delete {
     width: 20px;
